# navi_main

./: README.md
ARDUINO/navi_proto_openrb_code/: navi_proto_openrb_code.ino
navi_motor_control/navi_control_test_arduino/: CMakeLists.txt  package.xml
navi_motor_control/navi_control_test_dynamixel/: CMakeLists.txt  package.xml
navi_motor_control/navi_control_test_dynamixel/include/navi_control_test_dynamixel/: navi_control_test_dynamixel_node.h
navi_motor_control/navi_control_test_dynamixel/src/: navi_control_test_arduino_node.cpp  navi_control_test_dynamixel_node.cpp
navi_motor_control/navi_control_test_opnerb/: CMakeLists.txt  package.xml
navi_motor_control/navi_control_test_opnerb/src/: navi_control_test_openrb_node.cpp
navi_msgs/navi_humanoid_msgs/: CMakeLists.txt  package.xml
navi_msgs/navi_humanoid_msgs/msg/: Humanoid.msg
navi_msgs/navi_old_humanoid_msgs/: CMakeLists.txt  package.xml
navi_msgs/navi_old_humanoid_msgs/msg/: Head.msg  Humanoid.msg  Leftarm.msg
navi_msgs/navi_proto_humanoid_msgs/: CMakeLists.txt  package.xml
navi_msgs/navi_proto_humanoid_msgs/msg/: Humanoid.msg
